[project]
name = "finalproject-khilalov-muslim-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Muslim Khilalov",email = "hilalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
