[project]
name = "finalproject-khilalov-muslim-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Muslim Khilalov",email = "hilalov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prettytable (>=3.17.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "valutatrade_hub" },
    { include = "main.py" }
]

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]
